# scoutica-protocol

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENERATE_MY_CARD.md  LICENSE  README.md  RECRUITER_SKILL.md  SECURITY.md  SKILL.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.specs/network/: 00_INDEX.md  01_AUDIT.md  02_RECRUITER_CARD.md  03_JOB_POSTING_CARD.md  04_SEARCH_API.md  05_AGENT_COMMUNICATION.md  06_IMPLEMENTATION_ROADMAP.md  07_SCENARIOS.md  08_TRUST_REPUTATION.md  09_PRIVACY_GDPR.md  10_SCHEMAS.md  11_STARGATE_INTEGRATION.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_MANUAL.md  USE_CASES.md
docs-site/: docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx  roadmap.mdx
docs-site/architecture/: compliance.mdx  data-model.mdx  overview.mdx  six-pillars.mdx
docs-site/cli/: doctor.mdx  info.mdx  init.mdx  org.mdx  overview.mdx  preview.mdx  publish.mdx  resolve.mdx  role.mdx  scan.mdx  update.mdx  validate.mdx
docs-site/developer/: discovery-protocol.mdx  evaluating-candidates.mdx  evidence-verification.mdx  fetching-cards.mdx  overview.mdx  schema-validation.mdx
docs-site/guides/: create-card.mdx  employers.mdx  maintenance.mdx  privacy-zones.mdx  troubleshooting.mdx  use-cases.mdx
docs-site/skill-card/: discovery.mdx  employer.mdx  evidence.mdx  overview.mdx  profile.mdx  rules.mdx
reference/python/: models.py  pyproject.toml
schemas/: CAPABILITY_TAXONOMY.md  scoutica_discovery.schema.json
tools/: SCAN_PROMPT.md  scoring.py  scoutica  scoutica.ps1  validate_card.py
(+50 files in other folders)
