[tool.poetry]
name = "scoutica-shared-schemas"
version = "0.1.0"
description = "Shared data models and schemas for Scoutica agents"
authors = ["Scoutica Team"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

